# bidic

./: .astylerc  .editorconfig  .gitignore  .hdoc.toml  CMakeLists.txt  README.md  todo.md  verymportante
.cache/clangd/index/: FILE.h.DC85028E4E4CE1ED.idx  TestLexer.cpp.4ED417EF6B2A6918.idx  TestParser.cpp.8BA047DD4C050CEE.idx  __FILE.h.9C7877CA3B15A5E6.idx  __fpos64_t.h.BB8598694FC9637B.idx  __fpos_t.h.672CA59D2C523EA3.idx  __locale_t.h.562937249A35E0FC.idx  __mbstate_t.h.1098C0054B027315.idx  __sigset_t.h.8045FC68E4DB752E.idx  __sigval_t.h.E1A16F71C27FDC08.idx  __stdarg___gnuc_va_list.h.5AA4E0435F2247CA.idx  __stdarg___va_copy.h.3A839CF9EB1F8707.idx  __stdarg_header_macro.h.BC09B2B55B99B217.idx  __stdarg_va_arg.h.733BF5C34F37E21C.idx  __stdarg_va_copy.h.E17FB71ED397D5BE.idx  __stdarg_va_list.h.5EDDD97CCB22A844.idx  __stddef_header_macro.h.E92EE281705E095E.idx  __stddef_max_align_t.h.EDDBD3272D4FB440.idx  __stddef_null.h.0A0E0E9BC4C2658A.idx  __stddef_nullptr_t.h.35C842FDD2BE5BCC.idx  __stddef_offsetof.h.03578F61B2D67B62.idx  __stddef_ptrdiff_t.h.F850E13A972056B9.idx  __stddef_size_t.h.B103FDEE152B0C5B.idx  __stddef_wchar_t.h.159671ED9E5C3797.idx  algorithm.0CF8BAF3AEE4EE7C.idx  algorithmfwd.h.70FBAC2FC6BCD102.idx  align.h.BB985B62D2CD275D.idx  aligned_buffer.h.2FD5CCF990B6918C.idx  alloc_traits.h.472EC416C01CC3FD.idx  alloc_traits.h.9BED9D9DF89A3438.idx  alloca.h.9F45BF4F17E842CB.idx  allocated_ptr.h.0E1E56C6AA5846BE.idx  allocator.h.12E9F2416EE0E645.idx  any.72E4C7A36C441538.idx  array.C2A233E06D2C6D9B.idx  assert.h.AA40D2EE45AE2B31.idx  assertions.h.CF64DE56513F0E47.idx  ast.hh.D9D98C0352D5F3D3.idx  atomic.A94BC7C04C146CDD.idx  atomic_base.h.828109843409035F.idx  (+470 more)
docs/: eE4D5B78681E8FF62.html  enums.html  f07BD6E32BBFC0659.html  f2E0510FDBC640A62.html  f3017D418E3EE7259.html  functions.html  index.html  index.json  namespaces.html  r320E269005934CDD.html  r60171749E8F9EFAA.html  records.html  search.html
docs/hdoc-output/: eE4D5B78681E8FF62.html  f07BD6E32BBFC0659.html  f2E0510FDBC640A62.html  functions.html  index.html  namespaces.html  r320E269005934CDD.html  records.html
src/: lexer.hh  main.cpp
src/ast/: ast.cc  ast.hh  types.hh
src/ast_parser/: ast_parser.cc  ast_parser.hh  ast_parser_asm.cpp  ast_parser_asm.hh
src/emission/: emission.cc  emission.hh  emission_asm.cpp  emission_asm.hh
src/lexer/: lexer.cc  lexer.hh  token.hh
src/nast/: nast.hh
src/parser/: parser.cc  parser.hh  parser_asm.cpp  parser_asm.hh
src/scav/: scav.hh
src/scug/: scug.hh
tests/: hello_test.cc
tests/ast_parser/: test_ast_parser.cpp
tests/emitor/: test_emitor.cpp
tests/lexer/: TestLexer.cpp  test_lexer.cpp
tests/parser/: TestParser.cpp  test_parser.cpp
